--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             align-items: center;
             justify-content: center;
 
-            font-size: clamp(0.5rem, 3vw, 2rem);
+            font-size: clamp(0.8rem, 5vw, 2rem);
             /* 반응형 글씨 크기 */
             font-weight: 700;
             white-space: nowrap;
@@ -483,12 +483,12 @@
         }
 
         .describe-h2 {
-            font-size: clamp(0.9rem, 3vw, 1.8rem);
+            font-size: clamp(0.9rem, 4vw, 1.8rem);
             font-weight: 500;
         }
 
         .describe-h3 {
-            font-size: clamp(0.5rem, 3vw, 2rem);
+            font-size: clamp(0.5rem, 4.5vw, 2rem);
             font-weight: 600;
         }
 
@@ -509,7 +509,7 @@
 
         .services-text {
             text-align: center;
-            font-size: clamp(0.5rem, 3vw, 1.5rem);
+            font-size: clamp(0.7rem, 3vw, 1.5rem);
         }
 
         .services-button {
@@ -579,12 +579,12 @@
         .text-span {
             font-weight: 650;
             color: rgb(33, 33, 33);
-            font-size: clamp(0.5rem, 4vw, 3rem)
+            font-size: clamp(0.5rem, 6vw, 3rem)
         }
 
         .text-text {
             color: #505050;
-            font-size: clamp(0.5rem, 3vw, 2rem);
+            font-size: clamp(0.5rem, 4vw, 2rem);
             font-weight: 600;
             white-space: nowrap;
         }
@@ -592,6 +592,10 @@
         /*example*/
         .example-img {
             margin-top: 0.4rem;
+        }
+        .example-h2 {
+            font-size: clamp(0.9rem, 5vw, 1.8rem);
+            font-weight: 500;
         }
 
         /*text2*/
