옵션 밸류 변경
옵션 밸류 변경

--- a/index.html
+++ b/index.html
@@ -488,31 +488,31 @@
                                 <label id="optionsLabel">어떤 서비스가 필요하세요?</label>
                                 <div class="options-container">
                                     <div class="option-item">
-                                        <input type="checkbox" id="option1" name="options[]" value="옵션1" autocomplete="off">
+                                        <input type="checkbox" id="option1" name="options[]" value="닥트" autocomplete="off">
                                         <label for="option1">닥트</label>
                                     </div>
                                     <div class="option-item">
-                                        <input type="checkbox" id="option2" name="options[]" value="옵션2" autocomplete="off">
+                                        <input type="checkbox" id="option2" name="options[]" value="누전" autocomplete="off">
                                         <label for="option2">누전</label>
                                     </div>
                                     <div class="option-item">
-                                        <input type="checkbox" id="option3" name="options[]" value="옵션3" autocomplete="off">
+                                        <input type="checkbox" id="option3" name="options[]" value="전등/조명" autocomplete="off">
                                         <label for="option3">전등/조명</label>
                                     </div>
                                     <div class="option-item">
-                                        <input type="checkbox" id="option4" name="options[]" value="옵션4" autocomplete="off">
+                                        <input type="checkbox" id="option4" name="options[]" value="인테리어 전기" autocomplete="off">
                                         <label for="option4">인테리어 전기</label>
                                     </div>
                                     <div class="option-item">
-                                        <input type="checkbox" id="option5" name="options[]" value="옵션5" autocomplete="off">
+                                        <input type="checkbox" id="option5" name="options[]" value="전기 공사" autocomplete="off">
                                         <label for="option5">전기 공사</label>
                                     </div>
                                     <div class="option-item">
-                                        <input type="checkbox" id="option6" name="options[]" value="옵션6" autocomplete="off">
+                                        <input type="checkbox" id="option6" name="options[]" value="모터 교체" autocomplete="off">
                                         <label for="option6">모터 교체</label>
                                     </div>
                                     <div class="option-item">
-                                        <input type="checkbox" id="option7" name="options[]" value="옵션7" autocomplete="off">
+                                        <input type="checkbox" id="option7" name="options[]" value="증설 공사" autocomplete="off">
                                         <label for="option7">증설 공사</label>
                                     </div>
                                     <div class="option-item">
