--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    
+    <!-- nav관련 참조 -->
+    <link rel="stylesheet" href="css/nav.css">
+    <script src="js/nav.js"></script>
+    <!-- carousel관련 참조 -->
+    <link rel="stylesheet" href="css/carousel.css">
+    <script src="js/carousel.js"></script>
     <!-- ask관련 참조 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +27,8 @@
     <link rel="stylesheet" href="css/ask.css">
     <script src="js/ask.js"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body id="page-top">
@@ -40,205 +47,7 @@
             </div>
         </div>
     </nav>
-
-    <style>
-        * {
-            margin: 0;
-            outline: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html {
-            scroll-behavior: smooth;
-            background-color: #d2d2d220;
-        }
-
-        .navbar {
-            position: fixed;
-            right: 0;
-            left: 0;
-            padding: 1.2rem;
-            width: 100%;
-            z-index: 1;
-            background-color: transparent;
-            box-sizing: border-box;
-            transition: all 0.3s ease;
-        }
-
-        .nav-logo img {
-            max-height: 50px;
-            transition: max-height 0.3s ease;
-        }
-
-        .navbar.scroll {
-            padding: 1rem;
-            background-color: #3e3e3e;
-            box-shadow: 0 2px 5px #4b4b4bb3;
-        }
-
-        .navbar.scroll .nav-logo img {
-            max-height: 35px;
-        }
-
-        .navbar.scroll .nav-link a {
-            color: rgb(255, 255, 255);
-            transition: all 0.5s ease;
-        }
-
-        .navbar.scroll .nav-link a:hover {
-            color: #f7e647;
-        }
-
-
-        .navbar .nav-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: nowrap;
-        }
-
-        .nav-menu {
-            display: flex;
-            align-items: center;
-            gap: 1.5rem;
-            width: auto;
-        }
-
-
-        .navToggle {
-            display: none;
-            font-size: 1.5rem;
-            background: none;
-            border: none;
-            color: rgb(0, 0, 0);
-            transition: color 0.5s ease;
-        }
-
-
-        .nav-link {
-            display: flex;
-            gap: 1.5rem;
-            list-style: none;
-        }
-
-        .nav-link a {
-            color: rgb(0, 0, 0);
-            text-decoration: none;
-            transition: color 0.5s ease;
-        }
-
-        .nav-link a:hover {
-            color: #f7e647;
-        }
-
-
-        @media (max-width: 900px) {
-            .navbar {
-                position: relative;
-                padding: 0.7rem;
-                background-color: #3e3e3e;
-                box-shadow: 0 2px 5px #4b4b4bb3;
-            }
-
-            .navbar.scroll {
-                position: fixed;
-                padding: 0.7rem;
-            }
-
-            .navbar .nav-logo img {
-                max-height: 35px;
-            }
-
-            .nav-link a {
-                color: #ffffff;
-
-            }
-
-            .navToggle {
-                display: block;
-                color: #ffffff;
-            }
-
-            .navToggle:hover {
-                display: block;
-                color: #f7e647;
-            }
-
-
-            .nav-link {
-                display: flex;
-                flex-direction: column;
-                position: absolute;
-                background-color: #1a1a1a;
-                top: 100%;
-                left: 0;
-                width: 100%;
-                padding: 1rem;
-                text-align: center;
-
-                max-height: 0;
-                opacity: 0;
-                visibility: hidden;
-                transform: translateY(-10px);
-                overflow: hidden;
-                transition:
-                    max-height 0.5s ease,
-                    opacity 0.3s ease,
-                    transform 0.3s ease,
-                    padding 0.3s ease;
-                padding: 0 1rem;
-            }
-
-            .nav-link.show {
-                max-height: 300px;
-                opacity: 1;
-                visibility: visible;
-                transform: translateY(0);
-                padding: 1rem;
-            }
-
-        }
-
-
-        /*
-        -js-
-        navbar 축소 기능 : scroll 시 원래 있던 요소 제거 후 가져옴
-
-        @media로 정리해야 할 것
-        nav-logo와 nav-menu 위치 및 크기 *
-        nav-menu 햄버거로 변환 *
-        */
-    </style>
-
-    <script>
-        const navbar = document.getElementById("mainNav");
-
-        window.addEventListener('scroll', () => {
-            if (window.scrollY <= 20) {
-                navbar.classList.remove('scroll');
-            } else {
-                navbar.classList.add('scroll');
-            }
-        });
-
-        const navToggle = document.getElementById('navToggle');
-        const navLink = document.getElementById('navLink');
-        const navItems = document.querySelectorAll('.nav-item');
-
-        navToggle.addEventListener('click', () => {
-            navLink.classList.toggle('show');
-        });
-
-        navItems.forEach(item => {
-            item.addEventListener('click', () => {
-                navLink.classList.remove('show');
-            });
-        });
-    </script>
-
     <!-- main(img) -->
-    <!-- 슬라이드 추가 필요 -->
     <section class="page-section" id="main">
         <div class="carousel-container">
             <!--캐러셀-->
@@ -270,77 +79,6 @@
             </div>
         </div>
     </section>
-    <!--carousel-->
-    <style>
-        .carousel-container {
-            position: relative;
-            overflow: hidden;
-            width: 100%;
-        }
-
-        .carousel {
-            display: flex;
-            transition: all 0.5s ease;
-            width: 500vw;
-        }
-
-        .cell {
-            flex: 0 0 100vw;
-        }
-
-        .carousel img {
-            width: 100%;
-            height: auto;
-            display: block;
-        }
-
-        .carousel-button {
-            position: absolute;
-            top: 50%;
-            width: 100%;
-            left: 0;
-            justify-content: space-between;
-            transform: translateY(-50%);
-            padding: 0 1rem;
-            display: flex;
-            box-sizing: border-box;
-        }
-
-        .carousel-button button {
-            color: rgb(170, 170, 170);
-            background-color: rgba(0, 0, 0, 0);
-            border: none;
-            font-size: 3rem;
-            font-weight: bold;
-            cursor: pointer;
-            border-radius: 0;
-        }
-
-        .carousel-button button:hover {
-            color: rgb(98, 98, 98);
-        }
-    </style>
-
-    <script>
-        let index = 0;
-        const carousel = document.querySelector('.carousel');
-        const cell_Cnt = document.querySelectorAll('.cell').length;
-
-        document.querySelector('.btn-next').addEventListener('click', () => {
-            index = (index + 1) % cell_Cnt;
-            updateCarousel();
-        });
-
-        document.querySelector('.btn-prev').addEventListener('click', () => {
-            index = (index - 1 + cell_Cnt) % cell_Cnt;
-            updateCarousel();
-        });
-
-        function updateCarousel() {
-            const offset = index * 100;
-            carousel.style.transform = `translateX(-${offset}vw)`;
-        }
-    </script>
 
     <!-- describe -->
     <section class="page-section" id="describe">
@@ -623,179 +361,6 @@
     <section class="page-section" id="footer">
         
     </section>
-
-    <style>
-        .page-section {
-            padding-bottom: clamp(2.5rem, 6vw, 6rem);
-            padding-top: 0;
-        }
-
-        .wrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            /* 수직 정렬 필요 시 사용 */
-            text-align: center;
-            /* 내부 텍스트 가운데 정렬 */
-            width: 100%;
-            margin: 0 auto;
-        }
-
-        /*describe*/
-        .describe-title {
-            background-color: #3a4af3fb;
-            color: white;
-            width: 100%;
-            padding: 1em 0em;
-            /* border-radius: 0.5em; */
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-
-            font-size: clamp(0.8rem, 5vw, 2rem);
-            /* 반응형 글씨 크기 */
-            font-weight: 700;
-            white-space: nowrap;
-        }
-
-        .describe-text {
-            text-align: center;
-        }
-
-        .describe-block {
-            margin-top: clamp(1.3rem, 3vw, 2.8rem);
-            align-items: center;
-            white-space: nowrap;
-            max-width: 95%;
-        }
-
-        .describe-h2 {
-            font-size: clamp(0.9rem, 4vw, 1.8rem);
-            font-weight: 500;
-        }
-
-        .describe-h3 {
-            font-size: clamp(0.5rem, 4.5vw, 2rem);
-            font-weight: 600;
-        }
-
-        /*services*/
-        .services-title {
-            background-color: #00b3e0fb;
-            color: rgb(0, 0, 0);
-            padding: 0.75em 5em;
-            border-radius: 0.5em;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-
-            font-weight: 450;
-            white-space: nowrap;
-            max-width: 95%;
-        }
-
-        .services-text {
-            text-align: center;
-            font-size: clamp(0.7rem, 3vw, 1.5rem);
-        }
-
-        .services-button {
-            display: grid;
-            gap: clamp(0.8rem, 1.5vw, 2rem);
-            justify-content: center;
-            padding-top: 2rem;
-        }
-
-
-        @media (min-width: 820px) {
-
-            /* 큰 화면(6개) */
-            .services-button {
-                grid-template-columns: repeat(6, 1fr);
-            }
-        }
-
-        @media (max-width: 819.98px) {
-
-            /* 작은 화면(3개) */
-            .services-button {
-                grid-template-columns: repeat(3, 1fr);
-            }
-        }
-
-        @media (max-width:400px) {
-            .services-title {
-                font-size: 0.8rem;
-            }
-
-            .services-button img {
-                max-width: 90px;
-            }
-
-            .text2-text {
-                font-size: 0.8rem;
-            }
-        }
-
-        @media (min-width:401px) and (max-width:480px) {
-            .services-button img {
-                max-width: 100px;
-            }
-        }
-
-        .service-item img {
-            width: 120px;
-            height: auto;
-            transition: transform 0.3s ease;
-        }
-
-        .service-item img:hover {
-            transform: scale(1.05);
-        }
-
-        /*text*/
-        .italic {
-            font-style: italic
-        }
-
-        .text-p {
-            margin-top: 0;
-            margin-bottom: 0;
-        }
-
-        .text-span {
-            font-weight: 650;
-            color: rgb(33, 33, 33);
-            font-size: clamp(0.5rem, 6vw, 3rem)
-        }
-
-        .text-text {
-            color: #505050;
-            font-size: clamp(0.5rem, 4vw, 2rem);
-            font-weight: 600;
-            white-space: nowrap;
-        }
-
-        /*example*/
-        .example-img {
-            margin-top: 0.4rem;
-        }
-        .example-h2 {
-            font-size: clamp(0.9rem, 5vw, 1.8rem);
-            font-weight: 500;
-        }
-
-        /*text2*/
-        .text2-text {
-            font-size: clamp(0.5rem, 3vw, 2rem);
-            white-space: nowrap;
-        }
-
-        .text2-span {
-            font-weight: 800;
-        }
-    </style>
 
 </body>
 
