--- a/index.html
+++ b/index.html
@@ -53,19 +53,10 @@
             <!--캐러셀-->
             <div class="carousel">
                 <div class="cell">
-                    <img class="main-img" src="assets/img/jjugi1.jpeg" alt="#1" />
+                    <img class="main-img" src="assets/img/slide1.png" alt="#1" />
                 </div>
                 <div class="cell">
-                    <img class="main-img" src="assets/img/jjugi2.jpeg" alt="#2" />
-                </div>
-                <div class="cell">
-                    <img class="main-img" src="assets/img/jjugi3.jpeg" alt="#3" />
-                </div>
-                <div class="cell">
-                    <img class="main-img" src="assets/img/ggam.jpeg" alt="#4" />
-                </div>
-                <div class="cell">
-                    <img class="main-img" src="assets/img/jjugi4.jpeg" alt="#5" />
+                    <img class="main-img" src="assets/img/slide2.png" alt="#2" />
                 </div>
             </div>
             <!--버튼-->
