버튼 아이콘 변경

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                     <strong class="services-text">원하시는 서비스 클릭만해도 1만원 할인 및 무료견적</strong>
                 </div>
                 <div class="services-button">
-                    <div class="service-item">
+                    <!--버튼-->
+                    <!-- <div class="service-item">
                         <a href="#main" id="duct">
                             <img src="assets/img/sample_services.png" alt="Duct">
                         </a>
@@ -123,6 +124,32 @@
                     <div class="service-item">
                         <a href="#main" id="expansion">
                             <img src="assets/img/sample_services.png" alt="Expansion">
+                        </a>
+                    </div> -->
+
+                    <div class="service-item">
+                        <a href="#main" id="building">
+                            <img src="assets/icon/building.png" alt="Building">
+                        </a>
+                    </div>
+                    <div class="service-item">
+                        <a href="#main" id="LED">
+                            <img src="assets/icon/led-light.png" alt="LED">
+                        </a>
+                    </div>
+                    <div class="service-item">
+                        <a href="#main" id="lighting">
+                            <img src="assets/icon/lighting.png" alt="Lighting">
+                        </a>
+                    </div>
+                    <div class="service-item">
+                        <a href="#main" id="repair">
+                            <img src="assets/icon/repair.png" alt="Repair">
+                        </a>
+                    </div>
+                    <div class="service-item">
+                        <a href="#main" id="Circuit">
+                            <img src="assets/icon/short-circuit.png" alt="Short-Circuit">
                         </a>
                     </div>
                 </div>
