--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <!-- Navigation-->
     <nav class="navbar" id="mainNav">
         <div class="nav-container">
-            <a class="nav-logo" href="#page-top"><img src="assets/img/sample_logo.png"></a>
+            <a class="nav-logo nav-item" data-target="#page-top"><img src="assets/img/sample_logo.png"></a>
             <div class="nav-menu">
                 <button class="navToggle" id="navToggle">☰</button>
                 <ul class="nav-link" id="navLink">
-                    <li><a href="#services" class="nav-item">시공</a></li>
-                    <li><a href="#ask" class="nav-item">시공문의</a></li>
-                    <li><a href="#example" class="nav-item">시공사례</a></li>
+                    <li><a data-target="#services" class="nav-item">시공</a></li>
+                    <li><a data-target="#ask" class="nav-item">시공문의</a></li>
+                    <li><a data-target="#example" class="nav-item">시공사례</a></li>
                 </ul>
             </div>
         </div>
