qna slide section 추가

--- a/index.html
+++ b/index.html
@@ -380,6 +380,30 @@
         </div>
     </section>
 
+    <!--QnA slide-->
+    <section class="page-section" id="example">
+        <div class="carousel-container">
+            <!--캐러셀-->
+            <div class="carousel">
+                <div class="cell">
+                    <img class="main-img" src="assets/img/slide1.png" alt="#1" />
+                </div>
+                <div class="cell">
+                    <img class="main-img" src="assets/img/slide2.png" alt="#2" />
+                </div>
+            </div>
+            <!--버튼-->
+            <div class="carousel-button">
+                <button class="btn-prev"><i class="fa-solid fa-chevron-left"></i></button>
+                <button class="btn-next"><i class="fa-solid fa-chevron-right"></i></button>
+            </div>
+            <!--아래 뭐라고 해야 되냐 사진 아래 그 순서 동그란 그거 알지?-->
+            <div>
+
+            </div>
+        </div>
+    </section>
+
     <!-- example -->
     <section class="page-section" id="example">
         <div class="wrapper">
