qna slide section 추가

--- a/index.html
+++ b/index.html
@@ -381,15 +381,15 @@
     </section>
 
     <!--QnA slide-->
-    <section class="page-section" id="example">
+    <section class="page-section" id="QnA">
         <div class="carousel-container">
             <!--캐러셀-->
             <div class="carousel">
                 <div class="cell">
-                    <img class="main-img" src="assets/img/slide1.png" alt="#1" />
+                    <img class="qna-img" src="assets/img/slide1.png" alt="#2" />
                 </div>
                 <div class="cell">
-                    <img class="main-img" src="assets/img/slide2.png" alt="#2" />
+                    <img class="qna-img" src="assets/img/slide2.png" alt="#3" />
                 </div>
             </div>
             <!--버튼-->
