이미지 추가, 서비스 버튼 수정

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>경희전기</title>
+
+    <link rel="stylesheet" href="css/style.css">
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/img/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <!-- nav관련 참조 -->
     <link rel="stylesheet" href="css/nav.css">
     <script src="js/nav.js"></script>
@@ -28,7 +27,6 @@
     <script src="js/ask.js"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
-    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body id="page-top">
@@ -80,30 +78,54 @@
                 <div class="services-button">
                     <!--버튼-->
                     <div class="service-item">
-                        <a href="#main" id="building">
-                            <img src="assets/icon/building.png" alt="Building">
+                        <a href="#main" id="electric">
+                            <img src="assets/icon/electric.png" alt="electric">
                         </a>
                     </div>
+
                     <div class="service-item">
-                        <a href="#main" id="LED">
-                            <img src="assets/icon/led-light.png" alt="LED">
+                        <a href="#main" id="light">
+                            <img src="assets/icon/light.png" alt="light">
                         </a>
                     </div>
+
                     <div class="service-item">
-                        <a href="#main" id="lighting">
-                            <img src="assets/icon/lighting.png" alt="Lighting">
+                        <a href="#main" id="interiorLight">
+                            <img src="assets/icon/interior-light.png" alt="interior-light">
                         </a>
                     </div>
+
                     <div class="service-item">
-                        <a href="#main" id="repair">
-                            <img src="assets/icon/repair.png" alt="Repair">
+                        <a href="#main" id="shortCircuit">
+                            <img src="assets/icon/short-circuit.png" alt="short-circuit">
                         </a>
                     </div>
+
                     <div class="service-item">
-                        <a href="#main" id="Circuit">
-                            <img src="assets/icon/short-circuit.png" alt="Short-Circuit">
+                        <a href="#main" id="extend">
+                            <img src="assets/icon/extend.png" alt="extend">
                         </a>
                     </div>
+
+                    <div class="service-item">
+                        <a href="#main" id="doct">
+                            <img src="assets/icon/doct.png" alt="doct">
+                        </a>
+                    </div>
+
+
+                    <div class="service-item">
+                        <a href="#main" id="motor">
+                            <img src="assets/icon/motor.png" alt="motor">
+                        </a>
+                    </div>
+
+                    <div class="service-item">
+                        <a href="#main" id="etc">
+                            <img src="assets/icon/etc.png" alt="etc">
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </div>
