이미지 교체

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Navigation-->
     <nav class="navbar" id="mainNav">
         <div class="nav-container">
-            <a class="nav-logo nav-item" data-target="#page-top"><img src="assets/img/sample_logo.png"></a>
+            <a class="nav-logo nav-item" data-target="#page-top"><img src="assets/img/logo.png"></a>
             <div class="nav-menu">
                 <button class="navToggle" id="navToggle">☰</button>
                 <ul class="nav-link" id="navLink">
@@ -48,7 +48,7 @@
     <!-- main(img) -->
     <section class="page-section" id="main">
         <div class="container-main">
-            <img class="main-img" src="assets/img/slide1.png" alt="#1" />
+            <img class="main-img" src="assets/img/banner.png" alt="#1" />
         </div>
     </section>
 
@@ -355,10 +355,10 @@
             <!--캐러셀-->
             <div class="carousel">
                 <div class="cell">
-                    <img class="qna-img" src="assets/img/slide1.png" alt="#2" />
+                    <img class="qna-img" src="assets/img/QnA1.png" alt="#2" />
                 </div>
                 <div class="cell">
-                    <img class="qna-img" src="assets/img/slide2.png" alt="#3" />
+                    <img class="qna-img" src="assets/img/QnA2.png" alt="#3" />
                 </div>
             </div>
             <!--버튼-->
