--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>경희전기</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <!-- 페이퍼로지 웹폰트 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/whitedev7773/Paperlogy/paperlogy.css">
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/logo.png" />
     <!-- Font Awesome icons (free version)-->
@@ -20,9 +22,6 @@
     <link rel="stylesheet" href="css/carousel.css">
     <script src="js/carousel.js"></script>
     <!-- ask관련 참조 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/ask.css">
     <script src="js/ask.js"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
@@ -188,10 +187,10 @@
 
                 <div class="right-content">
                     <div class="right-content_head">
-                        <h2>
-                            경희전기는<br>
-                            40년 경력, 합리적인 가격, 안전한 시공으로<br>
-                            고객우선 기업입니다.
+                        <h2 class="ask-h2">
+                            간단 견적문의!<br>
+                            고객님이 원하시는 시공을 알려주세요.<br>
+                            40년 경력의 전문가가 24시간내에 예상견적을 알려드립니다.
                         </h2>
                     </div>
                     <div class="form-container">
