--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <h2 class="ask-h2">
                             간단 견적문의!<br>
                             고객님이 원하시는 시공을 알려주세요.<br>
-                            40년 경력의 전문가가 24시간내에 예상견적을 알려드립니다.
+                            24시간 내에 예상 견적을 알려드립니다!
                         </h2>
                     </div>
                     <div class="form-container">
@@ -390,7 +390,7 @@
             <div class="container text2-text">
                 <p class="text-p">전기수리부터 공사까지</p>
                 <p class="text-p"><span class="text2-span">"40년 경력 노하우"</span>와 <span class="text2-span">"철저한
-                        A/S"</span>로 책임지도록 하겠습니다.</p>
+                        A/S"</span>로 책임지겠습니다.</p>
             </div>
         </div>
     </section>
