텍스트 이미지 대체

--- a/index.html
+++ b/index.html
@@ -58,16 +58,20 @@
     <section class="page-section" id="describe">
         <div class="container">
             <div class="wrapper">
-                <div class="describe-title">
+                <!-- <div class="describe-title">
                     <strong class="describe-text">서울 경기 어디든!<br><span style="color:rgb(246, 43, 43)">긴급출동</span>
                         전기전문업체</strong>
                 </div>
                 <div class="describe-block">
                     <h2 class="text-muted describe-h2 italic">주거부터 상업까지</h2>
                     <h3 class="describe-h3">조명/누전/닥트/전기공사 올인원 긴급 출동 서비스</h3>
-                </div>
-            </div>
+                </div> -->
+                <img class="describe-img"src="assets/img/describe.jpg" alt="describe_img">            </div>
         </div>
+    </section>
+
+    <section class="page-section" id="text">
+        <img class="describe-img"src="assets/img/describe2.jpg" alt="describe_img2">
     </section>
 
     <!-- Services -->
@@ -134,7 +138,7 @@
     </section>
 
     <!-- text -->
-    <section class="page-section" id="text">
+    <!-- <section class="page-section" id="text">
         <div class="wrapper">
             <div class="container text-text">
                 <div class="italic">
@@ -142,9 +146,9 @@
                     <p class="text-p">40년 경력, 합리적인 가격, 안전한 시공으로</p>
                     <p class="text-p">고객우선 기업입니다.</p>
                     </italic>
-                </div>
             </div>
-    </section>
+        </div>
+    </section> -->
 
     <!-- ask -->
     <section class="page-section" id="ask">
@@ -387,17 +391,18 @@
     <!-- text2 -->
     <section class="page-section" id="text2">
         <div class="wrapper">
-            <div class="container text2-text">
+            <!-- <div class="container text2-text">
                 <p class="text-p">전기수리부터 공사까지</p>
                 <p class="text-p"><span class="text2-span">"40년 경력 노하우"</span>와 <span class="text2-span">"철저한
                         A/S"</span>로 책임지겠습니다.</p>
-            </div>
+            </div> -->
+            <img class="text2-img" src="assets/img/text2.jpg" alt="text2_img">
         </div>
     </section>
 
     <!-- footer -->
     <section class="page-section" id="footer">
-
+        <img class="banner-foot" src="assets/img/banner-foot.jpg" alt="banner_foot">
     </section>
 
 </body>
